--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Admin</title>
-    <script src="/public/styles.bundle.js"></script>
+    <script src="/styles.bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/public/entry.bundle.js"></script>
+    <script src="/entry.bundle.js"></script>
   </body>
 </html>
